# bus-manager

./: CMakeLists.txt  Makefile  README.md  bus_manager.sqlite
.github/workflows/: ci.yml  coverage.yml
headers/: Data.hpp  Onibus.hpp  Operacional.hpp  Parada.hpp  Reserva.hpp  Viagem.hpp
include/: Onibus.hpp  Parada.hpp  Viagem.hpp
include/services/: OnibusService.hpp  ParadaService.hpp
src/: Data.cpp  Onibus.cpp  OnibusService.cpp  Operacional.cpp  Parada.cpp  Reserva.cpp  Viagem.cpp  main.cpp
src/models/: Parada.cpp
src/services/: OnibusService.cpp  ParadaService.cpp
tests/: Testes.cpp
tests/integration/: OnibusServiceTest.cpp  ParadaServiceTest.cpp
